# cff-c

./: .clang-format  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  Rakefile  llms.txt  project.yml
.github/workflows/: format-check.yml  test.yml  update-readme.yml
example/: CMakeLists.txt  usage_example.c
src/: cff.c  cff.h
test/: common_utils.c  common_utils.h  test_cff_crc.c  test_cff_frame_builder.c  test_cff_integration.c  test_cff_parser.c  unity.c  unity.h
test/support/: .gitkeep
